<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <TableRow
        android:id="@+id/textRow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/wordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/wordsTextView"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/colorTextViews"/>

        <TextView
            android:id="@+id/translateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/enterTranslateTextView"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/colorTextViews"/>
    </TableRow>

    <TableRow
        android:id="@+id/firstRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/firstTestTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textAlignment="center"
            android:textColor="@color/colorTextViews"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/firstTestTranslateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="textPersonName" />

    </TableRow>

    <TableRow
        android:id="@+id/secondRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/secondTestTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/colorTextViews"/>

        <EditText
            android:id="@+id/secondTestTranslateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:id="@+id/thirdRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/thirdTestTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/colorTextViews"/>

        <EditText
            android:id="@+id/thirdTestTranslateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:id="@+id/fourthRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fourthTestTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/colorTextViews"/>

        <EditText
            android:id="@+id/fourthTestTranslateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="textPersonName"/>
    </TableRow>

    <TableRow
        android:id="@+id/fifthRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fifthTestTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/colorTextViews"/>

        <EditText
            android:id="@+id/fifthTestTranslateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="textPersonName"/>
    </TableRow>

    <TableRow
        android:id="@+id/sixthRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/sixthTestTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/colorTextViews"/>

        <EditText
            android:id="@+id/sixthTestTranslateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="textPersonName"/>
    </TableRow>

    <TableRow
        android:id="@+id/seventhRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/seventhTestTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/colorTextViews"/>

        <EditText
            android:id="@+id/seventhTestTranslateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:id="@+id/eigthRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/eigthTestTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/colorTextViews"/>
        <EditText
            android:id="@+id/eigthTestTranslateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:id="@+id/ninthRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/ninthTestTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/colorTextViews"/>

        <EditText
            android:id="@+id/ninthTestTranslateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:id="@+id/tenthRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tenthTestTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/colorTextViews"/>

        <EditText
            android:id="@+id/tenthTestTranslateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:ems="10"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:id="@+id/buttonRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/nextStepButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:onClick="nextTestStep"
            android:text="@string/nextStepButton" />

        <Button
            android:id="@+id/passTestButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:visibility="invisible"
            android:onClick="passTest"
            android:text="@string/passTestButton" />
    </TableRow>
</TableLayout>